# whisper-transcribe-example

./: .gitignore  README.md  pyproject.toml
whisper_transcribe_example/: main.py
